--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 * { font-family: 'Noto Sans KR', serif; margin: 0; padding: 0; }
-html { font-size: 10px; background-color: #EDEEF1; font-family: "Roboto"; }
+html { font-size: 10px; background-color: #EDEEF1; font-family: "Roboto"; overflow-y: scroll; }
 
 ::-webkit-scrollbar       { width: 10px; }
 ::-webkit-scrollbar-track { background-color: transparent; }
