--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,21 @@
 }
 
 * { font-family: 'Noto Sans KR', serif; margin: 0; padding: 0; }
-html { font-size: 10px; background-color: #EDEEF1; font-family: "Roboto"; overflow-y: scroll; }
+html {
+    font-size: 10px; 
+    background-color: #EDEEF1; 
+    font-family: "Roboto"; 
+    overflow-y: scroll;
+
+    --primary1: #2D4066;
+    --primary2: #203155;
+
+    --background2: #ededed;
+}
 
 ::-webkit-scrollbar       { width: 10px; }
 ::-webkit-scrollbar-track { background-color: transparent; }
 ::-webkit-scrollbar-thumb { background-color: #d6dee1; border-radius: 10px; border: 3px solid transparent; background-clip: content-box; }
 ::-webkit-scrollbar-thumb:hover { background-color: #a8bbbf; }
+
+
