--- a/src/index.css
+++ b/src/index.css
@@ -15,14 +15,19 @@ html {
     overflow-y: scroll;
 
     --primary1: #2D4066;
-    --primary2: #203155;
+    --primary2: #2D3D5F;
+    --primary3: #203155;
+    --primary-opacity: #2D4066be;
 
-    --background2: #ededed;
+    --background1: #FFFFFF;
+    --background2: #EDEDED;
+
+    --shadow1: rgba(0, 0, 0, 0.65) 0px 2px 8px;
+    --shadow2: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+
+    --text: #000000;
 }
 
-::-webkit-scrollbar       { width: 10px; }
-::-webkit-scrollbar-track { background-color: transparent; }
-::-webkit-scrollbar-thumb { background-color: #d6dee1; border-radius: 10px; border: 3px solid transparent; background-clip: content-box; }
-::-webkit-scrollbar-thumb:hover { background-color: #a8bbbf; }
+::-webkit-scrollbar { width: 0; }
 
 
