--- a/src/index.css
+++ b/src/index.css
@@ -19,13 +19,17 @@ html {
     --primary3: #203155;
     --primary-opacity: #2D4066be;
 
+    --secondary1: #8A9CC4;
+
     --background1: #FFFFFF;
     --background2: #EDEDED;
 
     --shadow1: rgba(0, 0, 0, 0.65) 0px 2px 8px;
     --shadow2: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 
-    --text1: #000000;
+    --text1: #FFFFFF;
+    --text2: #000000;
+
     --size1: 12px;
 }
 
