feat: Add mountain list

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ html {
     --secondary1: #8A9CC4;
 
     --background1: #FFFFFF;
-    --background2: #EDEDED;
+    --background2: #F8F8FA;
 
     --shadow1: rgba(0, 0, 0, 0.65) 0px 2px 8px;
     --shadow2: rgba(0, 0, 0, 0.15) 0px 2px 8px;
