--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ html {
 
     --background1: #FFFFFF;
     --background2: #F8F8FA;
+    --background3: #000000;
 
     --shadow1: rgba(0, 0, 0, 0.65) 0px 2px 8px;
     --shadow2: rgba(0, 0, 0, 0.15) 0px 2px 8px;
