feat: Add header color animation

--- a/src/component/Header.module.css
+++ b/src/component/Header.module.css
@@ -1,9 +1,17 @@
-header { height: 50px; width: 100%; position: fixed; top: 0; z-index: 10; transition: height 0.5s; -webkit-transition: height 0.7s; }
+.white { --text1: #FFFFFF; }
+.black { --text1: #000000; }
+
+header { height: 50px; width: 100%; position: fixed; top: 0; z-index: 10; transition: height 0.5s; -webkit-transition: height 0.7s;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none }
+.header_scroll { height: 60px; background-color: white; box-shadow: var(--shadow2); }
+.header_scroll .header_item__img { background-color: var(--text2); }
+.header_scroll .header_item__text { color: var(--text2); }
 
 .header_frame { height: 100%; padding: 0 calc((100% - 1320px) / 2); display: flex; align-items: center; justify-content: space-between; }
-
 .header_item  { display: flex; align-items: center; justify-content: center; }
-
 .header_item__img {
     height: 26px;
     width: 20px;
@@ -13,12 +21,6 @@ header { height: 50px; width: 100%; position: fixed; top: 0; z-index: 10; transi
     mask-size: cover;
 }
 .header_item__text { margin-left: 24px; font-size: var(--size1); color: var(--text1); text-decoration: none; }
-
-
-.header_change { height: 60px; background-color: white; box-shadow: var(--shadow2); }
-.header_change .header_item__img  { background-color: var(--text2); }
-.header_change .header_item__text { color: var(--text2); }
-
 
 /* Desktop */
 @media screen and (max-width: 1919px) {
