--- a/src/component/Loading.module.css
+++ b/src/component/Loading.module.css
@@ -3,12 +3,10 @@
     width: 100%;
     background-color: #000000;
     position: fixed;
-    z-index: 10;
+    z-index: 20;
     pointer-events: none;
     transition: all 3s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 
-.loading[data-done="false"] {
-    opacity: 0;
-}
+.loading[data-done="false"] { opacity: 0; }
