--- a/src/component/StoneSearch.module.css
+++ b/src/component/StoneSearch.module.css
@@ -1,12 +1,13 @@
-.stonekey_frame { width: 1320px; margin: 80px calc((100% - 1320px) / 2); display: grid; column-gap: 60px; grid-template-columns: 16% 80%; }
-.stonekey_item:nth-child(1) { }
-.stonekey_item:nth-child(4) { }
+/********** 프레임 **********/
+.stonekey { width: 1320px; margin: 80px calc((100% - 1320px) / 2); display: grid; column-gap: 60px; grid-template-columns: 16% 80%; }
+.stonekey_item:nth-child(5) { grid-column: 1 / 3; }
 
 
-.stonekey_item_head { display: flex; align-items: end; justify-content: space-between; }
-.stonekey_item__head { font-size: 4rem; font-weight: 100; }
-.stonekey_item__count { margin: 0 0 10px 0; }
-.stonekey_item__search {
+/* 상단 섹션 */
+.stonekey_item_head         { display: flex; align-items: end; justify-content: space-between; }
+.stonekey_item_head__title  { font-size: 4rem; font-weight: 100; }
+.stonekey_item__head_count  { margin: 0 0 10px 0; }
+.stonekey_item__head_search {
     height: 28px;
     width: 200px;
     margin: 0 10px 10px 0;
@@ -14,36 +15,72 @@
     align-items: center;
     border: 1px solid #D9DADB;
 }
+.stonekey_item__head_search img         { height: 30px; }
+.stonekey_item__head_search input       { height: 80%; width: 80%; padding-left: 12px; border: none; }
+.stonekey_item__head_search input:focus { outline: none; }
 
-.stonekey_item__search img { height: 30px; }
-.stonekey_item__search input { height: 80%; width: 80%; padding-left: 12px; border: none; }
-.stonekey_item__search input:focus { outline: none; }
 
+/********** 사이드 메뉴 **********/
+/* 사이드 메뉴 */
+.stonekey_item_side { display: flex; flex-direction: column; border-top: 1px solid #494949; }
+.stonekey_item_side__category { padding: 10px; display: flex; flex-direction: column; border: 1px solid #EEEEEE; border-top: none; min-height: 0px; overflow: hidden; transition: all linear 0.4s; }
 
-/* 카테고리 리스트 */
-.stonekey_item_category { display: flex; flex-direction: column; border-top: 1px solid #494949; }
-.stonekey_item__title {  }
-.stonekey_item__category { padding: 10px; display: flex; flex-direction: column; border: 1px solid #EEEEEE; border-top: none; min-height: 0px; overflow: hidden; transition: all ease 0.8s; }
-.stonekey_item__category_classify { display: flex; align-items: center; justify-content: space-between; }
-.stonekey_item__category_classify span { font-size: 1.2rem; }
-.stonekey_item__category_body { margin: 4px 0 0 0; }
-.stonekey_item__category__body { margin: 4px 0 4px 0; display: flex; justify-content: space-between; color: #767676; }
-.stonekey_item__category__body_name::before { content: ' '; height: 5px; width: 5px; margin-right: 4px; display: inline-block; border: 1px solid #DBDBDB; border-top: none; border-right: none; }
+/* 사이드 메뉴 구분 */
+.stonekey_item_side__category_classify,
+.stonekey_item_side__filter_classify { display: flex; align-items: center; justify-content: space-between; cursor: pointer; }
+.stonekey_item_side__category_classify span,
+.stonekey_item_side__filter_classify span { font-size: 1.2rem; }
 
-.dropdown_active { max-height: 100%; }
-.dropdown_disable { max-height: 18px; }
-
-.stonekey_item__category_icon { 
+.stonekey_item_side__category_icon { 
     height: 14px;
     width: 14px;
     background-color: var(--text2);
     --webkit-mask: url('/public/icon/angle-down.svg') no-repeat center;
     mask: url('/public/icon/angle-down.svg') no-repeat center;
-    mask-size: cover; }
+    mask-size: cover;
+}
+
+/* 사이드 메뉴 구분 내용 */
+.stonekey_item_side__category_body,
+.stonekey_item_side__filter_body    { margin: 4px 0 0 0; }
+.stonekey_item_side__category__body { margin: 4px 0 4px 0; display: flex; justify-content: space-between; color: #767676; text-decoration: none; }
+.stonekey_item_side__filter__body    { margin: 4px 0 4px 0; display: flex; align-items: center; color: #767676; }
+
+.stonekey_item_side__filter__body input {
+    display: none;
+}
+.stonekey_item_side__filter__body input + label {
+	width: 16px;
+	height: 16px;
+    margin-right: 4px;
+    display: inline-block;
+	border: 1px solid #DBDBDB;
+	cursor: pointer;
+    box-sizing: border-box;
+}
+.stonekey_item_side__filter__body input:checked + label {
+    padding: 4px;
+    box-sizing: border-box;
+    background-color: #494949;
+}
+
+.stonekey_item_side__filter__body label {
+    color: #505050;
+    cursor: pointer;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+}
+
+.stonekey_item_side__category__body_name::before { content: ' '; height: 5px; width: 5px; margin-right: 4px; display: inline-block; border: 1px solid #DBDBDB; border-top: none; border-right: none; }
+
+.dropdown_active { max-height: 200px; }
+.dropdown_disable { max-height: 16px; }
 
 
 
-
+/********** 스톤 리스트 **********/
 /* 스톤 리스트 */
 .stonekey_item_body { display: flex; flex-direction: column; border-top: 1px solid #494949; }
 .stonekey_item__target { height: 40px; padding: 0 24px; display: flex; align-items: center; gap: 12px; border: 1px solid #EEEEEE; }
@@ -53,7 +90,7 @@
 .stonekey_item__target span:nth-child(5),
 .stonekey_item__target span:nth-child(6) { color: #767676; cursor: pointer; }
 
-.stonekey_item__body { display: grid; grid-template-columns: repeat(4, 1fr); gap: 80px; }
+.stonekey_item__body { display: grid; grid-template-columns: repeat(4, 1fr); row-gap: 40px; column-gap: 80px; }
 
 .stonekey_item__stone { height: 300px; display: flex; flex-direction: column; align-items: center; justify-content: space-between; border-radius: 10px; }
 
@@ -70,10 +107,13 @@
 .stonekey_item__stone_describe { display: -webkit-box; overflow: hidden; text-overflow: ellipsis; -webkit-line-clamp: 3; -webkit-box-orient: vertical; }
 
 
+
+
+
 /* 페이지네이션 */
 .stonekey_item_pagenation { margin: 40px 20%; display: flex; justify-content: center; gap: 4px; }
-.stonekey_item_pagenation span { height: 24px; width: 24px; display: flex; align-items: center; justify-content: center; font-size: 1.2rem; border: 1px solid #EEEEEE; border-radius: 4px; cursor: pointer; }
-.stonekey_item__img  { height: 24px; width: 24px; display: flex; align-items: center; justify-content: center; border: 1px solid #EEEEEE; border-radius: 4px; cursor: pointer; }
+.stonekey_item_pagenation span { height: 24px; width: 24px; display: flex; align-items: center; justify-content: center; font-size: 1.2rem; color: #767676; cursor: pointer; }
+.stonekey_item__img  { height: 24px; width: 24px; display: flex; align-items: center; justify-content: center; cursor: pointer; }
 
 .stonekey_item_pagenation span:hover { background-color: #DDDDDD; }
 .stonekey_item__img:hover { background-color: #DDDDDD; }
@@ -81,14 +121,14 @@
 
 .icon_left  {
     height: 14px; width: 7px;
-    background-color: var(--text2);
+    background-color: #767676;
     --webkit-mask: url('/public/icon/angle-left.svg') no-repeat center;
     mask: url('/public/icon/angle-left.svg') no-repeat center;
     mask-size: cover; 
 }
 .icon_right {
     height: 14px; width: 7px;
-    background-color: var(--text2);
+    background-color: #767676;
     --webkit-mask: url('/public/icon/angle-right.svg') no-repeat center;
     mask: url('/public/icon/angle-right.svg') no-repeat center;
     mask-size: cover;
