--- a/src/component/StoneSearch.module.css
+++ b/src/component/StoneSearch.module.css
@@ -1,6 +1,6 @@
 /********** 프레임 **********/
-.stonekey { width: 1320px; margin: 80px calc((100% - 1320px) / 2); display: grid; column-gap: 60px; grid-template-columns: 16% 80%; }
-.stonekey_item:nth-child(5) { grid-column: 1 / 3; }
+.stonekey { width: 1320px; margin: 80px calc((100% - 1310px) / 2); display: grid; column-gap: 60px; grid-template-columns: 210px 1050px; }
+.stonekey_item:nth-child(5) { grid-column: 2 / 3; }
 
 
 /* 상단 섹션 */
@@ -88,8 +88,8 @@
 
 .stonekey_item__body { display: grid; grid-template-columns: repeat(4, 1fr); row-gap: 40px; column-gap: 80px; }
 
+.stonekey_item__none { height: 300px; display: flex; align-items: center; justify-content: center; grid-column: 1 / 5; }
 .stonekey_item__stone { height: 300px; display: flex; flex-direction: column; align-items: center; justify-content: space-between; border-radius: 10px; }
-
 
 .stonekey_item__stone div:nth-child(1) {  }
 .stonekey_item__stone div:nth-child(2) { width: 100%; }
@@ -104,15 +104,15 @@
 
 
 
-
-
 /* 페이지네이션 */
-.stonekey_item_pagenation { margin: 40px 20%; display: flex; justify-content: center; gap: 4px; }
+.stonekey_item_pagenation { margin: 100px 0 40px 0; display: flex; justify-content: center; gap: 4px; }
 .stonekey_item_pagenation span { height: 24px; width: 24px; display: flex; align-items: center; justify-content: center; font-size: 1.2rem; color: #767676; cursor: pointer; }
-.stonekey_item__img  { height: 24px; width: 24px; display: flex; align-items: center; justify-content: center; cursor: pointer; }
-
 .stonekey_item_pagenation span:hover { background-color: #DDDDDD; }
+
+.stonekey_item__img  { height: 24px; width: 24px; display: flex; align-items: center; justify-content: center; cursor: pointer; }
 .stonekey_item__img:hover { background-color: #DDDDDD; }
+
+.stonekey_item__pagenation_now { font-weight: bold; }
 
 
 .icon_left  {
